更新manage-api