@@ -27,6 +27,7 @@ import smhs.modules.agent.dao.AgentDao;
 import smhs.modules.agent.dto.AgentCreateDTO;
 import smhs.modules.agent.dto.AgentDTO;
 import smhs.modules.agent.dto.AgentUpdateDTO;
+import smhs.modules.agent.entity.AgentContextProviderEntity;
 import smhs.modules.agent.entity.AgentEntity;
 import smhs.modules.agent.entity.AgentPluginMapping;
 import smhs.modules.agent.entity.AgentTemplateEntity;
@@ -59,6 +60,7 @@ public class AgentServiceImpl extends BaseServiceImpl<AgentDao, AgentEntity> imp
     private final AgentChatHistoryService agentChatHistoryService;
     private final AgentTemplateService agentTemplateService;
     private final ModelProviderService modelProviderService;
+    private final AgentContextProviderService agentContextProviderService;
 
     @Override
     public PageData<AgentEntity> adminAgentList(Map<String, Object> params) {
@@ -82,6 +84,13 @@ public class AgentServiceImpl extends BaseServiceImpl<AgentDao, AgentEntity> imp
                 agent.setChatHistoryConf(Constant.ChatHistoryConfEnum.RECORD_TEXT_AUDIO.getCode());
             }
         }
+        
+        // 查询上下文源配置
+        AgentContextProviderEntity contextProviderEntity = agentContextProviderService.getByAgentId(id);
+        if (contextProviderEntity != null) {
+            agent.setContextProviders(contextProviderEntity.getContextProviders());
+        }
+        
         // 无需额外查询插件列表，已通过SQL查询出来
         return agent;
     }
@@ -280,7 +289,7 @@ public class AgentServiceImpl extends BaseServiceImpl<AgentDao, AgentEntity> imp
             // 1. 收集本次提交的 pluginId
             List<String> newPluginIds = functions.stream()
                     .map(AgentUpdateDTO.FunctionInfo::getPluginId)
-                    .collect(java.util.stream.Collectors.toList());
+                    .toList();
 
             // 2. 查询当前agent现有的所有映射
             List<AgentPluginMapping> existing = agentPluginMappingService.list(
@@ -301,15 +310,15 @@ public class AgentServiceImpl extends BaseServiceImpl<AgentDao, AgentEntity> imp
                     m.setId(old.getId());
                 }
                 return m;
-            }).collect(java.util.stream.Collectors.toList());
+            }).toList();
 
             // 4. 拆分：已有ID的走更新，无ID的走插入
             List<AgentPluginMapping> toUpdate = allToPersist.stream()
                     .filter(m -> m.getId() != null)
-                    .collect(java.util.stream.Collectors.toList());
+                    .toList();
             List<AgentPluginMapping> toInsert = allToPersist.stream()
                     .filter(m -> m.getId() == null)
-                    .collect(java.util.stream.Collectors.toList());
+                    .toList();
 
             if (!toUpdate.isEmpty()) {
                 agentPluginMappingService.updateBatchById(toUpdate);
@@ -322,7 +331,7 @@ public class AgentServiceImpl extends BaseServiceImpl<AgentDao, AgentEntity> imp
             List<Long> toDelete = existing.stream()
                     .filter(old -> !newPluginIds.contains(old.getPluginId()))
                     .map(AgentPluginMapping::getId)
-                    .collect(java.util.stream.Collectors.toList());
+                    .toList();
             if (!toDelete.isEmpty()) {
                 agentPluginMappingService.removeBatchByIds(toDelete);
             }
@@ -341,6 +350,14 @@ public class AgentServiceImpl extends BaseServiceImpl<AgentDao, AgentEntity> imp
         } else if (existingEntity.getChatHistoryConf() != null && existingEntity.getChatHistoryConf() == 1) {
             // 删除音频数据
             agentChatHistoryService.deleteByAgentId(existingEntity.getId(), true, false);
+        }
+
+        // 更新上下文源配置
+        if (dto.getContextProviders() != null) {
+            AgentContextProviderEntity contextEntity = new AgentContextProviderEntity();
+            contextEntity.setAgentId(agentId);
+            contextEntity.setContextProviders(dto.getContextProviders());
+            agentContextProviderService.saveOrUpdateByAgentId(contextEntity);
         }
 
         boolean b = validateLLMIntentParams(dto.getLlmModelId(), dto.getIntentModelId());
@@ -407,7 +424,20 @@ public class AgentServiceImpl extends BaseServiceImpl<AgentDao, AgentEntity> imp
             entity.setIntentModelId(template.getIntentModelId());
             entity.setSystemPrompt(template.getSystemPrompt());
             entity.setSummaryMemory(template.getSummaryMemory());
-            entity.setChatHistoryConf(template.getChatHistoryConf());
+
+            // 根据记忆模型类型设置默认的chatHistoryConf值
+            if (template.getMemModelId() != null) {
+                if (template.getMemModelId().equals("Memory_nomem")) {
+                    // 无记忆功能的模型，默认不记录聊天记录
+                    entity.setChatHistoryConf(0);
+                } else {
+                    // 有记忆功能的模型，默认记录文本和语音
+                    entity.setChatHistoryConf(2);
+                }
+            } else {
+                entity.setChatHistoryConf(template.getChatHistoryConf());
+            }
+
             entity.setLangCode(template.getLangCode());
             entity.setLanguage(template.getLanguage());
         }
